--- a/project3/TransactionManager.fxml
+++ b/project3/TransactionManager.fxml
@@ -3,62 +3,101 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ToggleGroup?>
-<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Line?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="713.0" prefWidth="1037.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1"  fx:controller="project3.Controller">
+<AnchorPane prefHeight="873.0" prefWidth="1226.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="project3.Controller">
    <children>
-      <VBox prefHeight="720.0" prefWidth="791.0">
+      <VBox layoutX="17.0" layoutY="282.0" prefHeight="189.0" prefWidth="161.0">
          <children>
-            <Region prefHeight="19.0" prefWidth="282.0" />
-            <VBox prefHeight="133.0" prefWidth="791.0">
-               <children>
-                  <RadioButton fx:id="MoneyMarketRB" mnemonicParsing="false" onAction="#DisableCheckBox" prefHeight="45.0" prefWidth="285.0" text="MoneyMarket">
-                     <toggleGroup>
-                        <ToggleGroup fx:id="TypeAcc" />
-                     </toggleGroup>
-                  </RadioButton>
-                  <Region prefHeight="19.0" prefWidth="282.0" />
-                  <RadioButton fx:id="SavingRB" mnemonicParsing="false" onAction="#DisableCheckBox" prefHeight="45.0" prefWidth="282.0" text="Saving" toggleGroup="$TypeAcc" />
-                  <Region layoutX="10.0" layoutY="50.0" prefHeight="19.0" prefWidth="282.0" />
-                  <RadioButton fx:id="CheckingRB" mnemonicParsing="false" onAction="#DisableCheckBox" prefHeight="45.0" prefWidth="285.0" text="Checking" toggleGroup="$TypeAcc" />
-               </children>
-            </VBox>
-            <Region layoutX="10.0" layoutY="41.0" prefHeight="21.0" prefWidth="791.0" />
-            <Region layoutX="10.0" layoutY="105.0" prefHeight="19.0" prefWidth="282.0" />
-            <Region layoutX="10.0" layoutY="169.0" prefHeight="19.0" prefWidth="282.0" />
-            <CheckBox fx:id="SpecialSavingAccCB" mnemonicParsing="false" prefHeight="45.0" prefWidth="285.0" text="Special Savings Account" />
-            <Region layoutX="10.0" layoutY="233.0" prefHeight="19.0" prefWidth="255.0" />
-            <CheckBox fx:id="DirectDepositCheckingsCB" layoutX="10.0" layoutY="252.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="285.0" text="Direct Deposit Checkings" />
-            <Region layoutX="10.0" layoutY="297.0" prefHeight="19.0" prefWidth="282.0" />
-            <TextField fx:id="FirstNameInput" prefHeight="33.0" prefWidth="282.0" text="Enter First Name Here&#10;" />
-            <Region layoutX="10.0" layoutY="361.0" prefHeight="19.0" prefWidth="282.0" />
-            <TextField fx:id="LastNameInput" layoutX="10.0" layoutY="380.0" prefHeight="33.0" prefWidth="282.0" text="Enter Last Name Here&#10;" />
-            <Region layoutX="10.0" layoutY="427.0" prefHeight="19.0" prefWidth="282.0" />
-            <TextField fx:id="AmountInput" layoutX="10.0" layoutY="446.0" prefHeight="33.0" prefWidth="282.0" text="Enter Amount Here&#10;" />
-            <Region layoutX="10.0" layoutY="494.0" prefHeight="19.0" prefWidth="282.0" />
-            <TextField fx:id="DateInput" layoutX="10.0" layoutY="513.0" prefHeight="33.0" prefWidth="282.0" text="Enter Date Here&#10;" />
-            <Region layoutX="10.0" layoutY="561.0" prefHeight="19.0" prefWidth="282.0" />
-            <Button fx:id="SubmitFromCommand" onAction="#getDataFromCommands" mnemonicParsing="false" prefHeight="72.0" prefWidth="208.0" text="Submit" />
-         </children>
-      </VBox>
-      <VBox layoutX="791.0" prefHeight="323.0" prefWidth="138.0">
-         <children>
-            <RadioButton fx:id="OpenAccRB" onAction="#DisableCheckBox" mnemonicParsing="false" prefHeight="54.0" prefWidth="147.0" text="Open Account">
+            <RadioButton fx:id="MoneyMarketRB" mnemonicParsing="false" prefHeight="38.0" prefWidth="160.0" text="MoneyMarket">
                <toggleGroup>
-                  <ToggleGroup fx:id="BankOpp" />
-               </toggleGroup>
-            </RadioButton>
-            <Region prefHeight="25.0" prefWidth="138.0" />
-            <RadioButton fx:id="CloseAccRB" onAction="#DisableCheckBox" mnemonicParsing="false" prefHeight="54.0" prefWidth="147.0" text="Close Account" toggleGroup="$BankOpp" />
-            <Region layoutX="10.0" layoutY="64.0" prefHeight="25.0" prefWidth="138.0" />
-            <RadioButton fx:id="DepositRB" onAction="#DisableCheckBox" mnemonicParsing="false" prefHeight="54.0" prefWidth="147.0" text="Deposit" toggleGroup="$BankOpp" />
-            <Region layoutX="10.0" layoutY="143.0" prefHeight="25.0" prefWidth="138.0" />
-            <RadioButton fx:id="WithdrawAccRB" onAction="#DisableCheckBox" mnemonicParsing="false" prefHeight="53.0" prefWidth="161.0" text="Withdraw" toggleGroup="$BankOpp" />
+                  <ToggleGroup fx:id="AccType" />
+               </toggleGroup></RadioButton>
+            <Region prefHeight="30.0" prefWidth="161.0" />
+            <RadioButton fx:id="SavingRB" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="160.0" text="Savings" toggleGroup="$AccType" />
+            <Region layoutX="10.0" layoutY="48.0" prefHeight="30.0" prefWidth="161.0" />
+            <RadioButton fx:id="CheckingRB" layoutX="10.0" layoutY="78.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="160.0" text="Checking" toggleGroup="$AccType" />
          </children>
       </VBox>
+      <VBox layoutX="14.0" layoutY="496.0" prefHeight="101.0" prefWidth="203.0">
+         <children>
+            <CheckBox fx:id="SpecialSavingAccCB" mnemonicParsing="false" prefHeight="36.0" prefWidth="203.0" text="Special Savings Account" />
+            <Region prefHeight="30.0" prefWidth="161.0" />
+            <CheckBox fx:id="DirectDepositCheckingsCB" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="37.0" prefWidth="203.0" text="Direct Deposit Account" />
+         </children>
+      </VBox>
+      <VBox layoutX="17.0" layoutY="14.0" prefHeight="224.0" prefWidth="140.0">
+         <children>
+            <RadioButton fx:id="OpenAccRB" mnemonicParsing="false" prefHeight="31.0" prefWidth="140.0" text="Open Account">
+               <toggleGroup>
+                  <ToggleGroup fx:id="BankOptions" />
+               </toggleGroup></RadioButton>
+            <Region prefHeight="30.0" prefWidth="161.0" />
+            <RadioButton fx:id="CloseAccRB" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="140.0" text="Close Account" toggleGroup="$BankOptions" />
+            <Region layoutX="10.0" layoutY="41.0" prefHeight="30.0" prefWidth="161.0" />
+            <RadioButton fx:id="WithdrawAccRB" layoutX="10.0" layoutY="71.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="140.0" text="Withdraw" toggleGroup="$BankOptions" />
+            <Region layoutX="10.0" layoutY="102.0" prefHeight="30.0" prefWidth="161.0" />
+            <RadioButton fx:id="DepositRB" layoutX="10.0" layoutY="132.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="140.0" text="Deposit" toggleGroup="$BankOptions" />
+         </children>
+      </VBox>
+      <VBox layoutX="9.0" layoutY="619.0" prefHeight="253.0" prefWidth="676.0">
+         <children>
+            <TextField fx:id="FirstNameInput" prefHeight="33.0" prefWidth="282.0" text="Enter First Name Here&#10;" />
+            <Region prefHeight="19.0" prefWidth="282.0" />
+            <TextField fx:id="LastNameInput" prefHeight="33.0" prefWidth="282.0" text="Enter Last Name Here&#10;" />
+            <Region prefHeight="19.0" prefWidth="282.0" />
+            <TextField fx:id="AmountInput" prefHeight="33.0" prefWidth="282.0" text="Enter Amount Here&#10;" />
+            <Region prefHeight="19.0" prefWidth="282.0" />
+            <TextField fx:id="DateInput" prefHeight="33.0" prefWidth="282.0" text="Enter Date Here&#10;" />
+            <Button fx:id="SubmitInfo" mnemonicParsing="false" prefHeight="46.0" prefWidth="127.0" text="Submit Info" />
+            <Region prefHeight="19.0" prefWidth="282.0" />
+         </children>
+      </VBox>
+      <Line endX="100.0" layoutX="116.0" layoutY="263.0" startX="-100.0" />
+      <Line endX="100.0" layoutX="109.0" layoutY="608.0" startX="-100.0" />
+      <Line endX="100.0" layoutX="109.0" layoutY="471.0" startX="-100.0" />
+      <VBox layoutX="706.0" layoutY="619.0" prefHeight="213.0" prefWidth="506.0">
+         <children>
+            <HBox prefHeight="49.0" prefWidth="506.0">
+               <children>
+                  <Button fx:id="SelectFileButton" onAction="#getFileInput" mnemonicParsing="false" prefHeight="41.0" prefWidth="138.0" text="Import File" />
+                  <TextField fx:id="FileImportNameTxtF" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="349.0" />
+               </children>
+            </HBox>
+            <Button fx:id="SubmitFileButton" mnemonicParsing="false" prefHeight="41.0" prefWidth="138.0" text="Submit File" />
+            <Region prefHeight="40.0" prefWidth="506.0" />
+            <HBox prefHeight="76.0" prefWidth="506.0">
+               <children>
+                  <Button fx:id="ExportFileButton" mnemonicParsing="false" prefHeight="41.0" prefWidth="138.0" text="Export File" />
+                  <TextField maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="349.0" />
+               </children>
+            </HBox>
+         </children>
+      </VBox>
+      <ScrollPane layoutX="305.0" layoutY="14.0" prefHeight="476.0" prefWidth="775.0">
+         <content>
+            <TextArea fx:id="TextAreaPrint" prefHeight="473.0" prefWidth="775.0" />
+         </content>
+      </ScrollPane>
+      <HBox layoutX="305.0" layoutY="497.0" prefHeight="76.0" prefWidth="775.0">
+         <children>
+            <RadioButton fx:id="DisplayAllAcc" mnemonicParsing="false" prefHeight="56.0" prefWidth="175.0" text="Display All Accounts">
+               <toggleGroup>
+                  <ToggleGroup fx:id="PrintType" />
+               </toggleGroup></RadioButton>
+            <Region prefHeight="76.0" prefWidth="21.0" />
+            <RadioButton fx:id="DisplayByDate" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="56.0" prefWidth="199.0" text="Display Accounts By Date" toggleGroup="$PrintType" />
+            <Region layoutX="185.0" layoutY="10.0" prefHeight="76.0" prefWidth="21.0" />
+            <RadioButton fx:id="DisplayByLName" layoutX="206.0" layoutY="10.0" mnemonicParsing="false" prefHeight="56.0" prefWidth="304.0" text="Display Accounts By Last Name" toggleGroup="$PrintType" />
+         </children>
+      </HBox>
    </children>
-</Pane>
+</AnchorPane>
