--- a/project3/TransactionManager.fxml
+++ b/project3/TransactionManager.fxml
@@ -17,35 +17,35 @@
    <children>
       <VBox layoutX="17.0" layoutY="282.0" prefHeight="189.0" prefWidth="161.0">
          <children>
-            <RadioButton fx:id="MoneyMarketRB" mnemonicParsing="false" prefHeight="38.0" prefWidth="160.0" text="MoneyMarket">
+            <RadioButton fx:id="MoneyMarketRB" onAction="#DisableCheckBox" mnemonicParsing="false" prefHeight="38.0" prefWidth="160.0" text="MoneyMarket">
                <toggleGroup>
                   <ToggleGroup fx:id="AccType" />
                </toggleGroup></RadioButton>
             <Region prefHeight="30.0" prefWidth="161.0" />
-            <RadioButton fx:id="SavingRB" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="160.0" text="Savings" toggleGroup="$AccType" />
+            <RadioButton fx:id="SavingRB" onAction="#DisableCheckBox"  layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="160.0" text="Savings" toggleGroup="$AccType" />
             <Region layoutX="10.0" layoutY="48.0" prefHeight="30.0" prefWidth="161.0" />
-            <RadioButton fx:id="CheckingRB" layoutX="10.0" layoutY="78.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="160.0" text="Checking" toggleGroup="$AccType" />
+            <RadioButton fx:id="CheckingRB" onAction="#DisableCheckBox"  layoutX="10.0" layoutY="78.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="160.0" text="Checking" toggleGroup="$AccType" />
          </children>
       </VBox>
       <VBox layoutX="14.0" layoutY="496.0" prefHeight="101.0" prefWidth="203.0">
          <children>
-            <CheckBox fx:id="SpecialSavingAccCB" mnemonicParsing="false" prefHeight="36.0" prefWidth="203.0" text="Special Savings Account" />
+            <CheckBox fx:id="SpecialSavingAccCB" onAction="#DisableCheckBox" mnemonicParsing="false" prefHeight="36.0" prefWidth="203.0" text="Special Savings Account" />
             <Region prefHeight="30.0" prefWidth="161.0" />
-            <CheckBox fx:id="DirectDepositCheckingsCB" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="37.0" prefWidth="203.0" text="Direct Deposit Account" />
+            <CheckBox fx:id="DirectDepositCheckingsCB" onAction="#DisableCheckBox" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="37.0" prefWidth="203.0" text="Direct Deposit Account" />
          </children>
       </VBox>
       <VBox layoutX="17.0" layoutY="14.0" prefHeight="224.0" prefWidth="140.0">
          <children>
-            <RadioButton fx:id="OpenAccRB" mnemonicParsing="false" prefHeight="31.0" prefWidth="140.0" text="Open Account">
+            <RadioButton fx:id="OpenAccRB" onAction="#DisableCheckBox" mnemonicParsing="false" prefHeight="31.0" prefWidth="140.0" text="Open Account">
                <toggleGroup>
                   <ToggleGroup fx:id="BankOptions" />
                </toggleGroup></RadioButton>
             <Region prefHeight="30.0" prefWidth="161.0" />
-            <RadioButton fx:id="CloseAccRB" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="140.0" text="Close Account" toggleGroup="$BankOptions" />
+            <RadioButton fx:id="CloseAccRB" onAction="#DisableCheckBox" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="140.0" text="Close Account" toggleGroup="$BankOptions" />
             <Region layoutX="10.0" layoutY="41.0" prefHeight="30.0" prefWidth="161.0" />
-            <RadioButton fx:id="WithdrawAccRB" layoutX="10.0" layoutY="71.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="140.0" text="Withdraw" toggleGroup="$BankOptions" />
+            <RadioButton fx:id="WithdrawAccRB" onAction="#DisableCheckBox" layoutX="10.0" layoutY="71.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="140.0" text="Withdraw" toggleGroup="$BankOptions" />
             <Region layoutX="10.0" layoutY="102.0" prefHeight="30.0" prefWidth="161.0" />
-            <RadioButton fx:id="DepositRB" layoutX="10.0" layoutY="132.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="140.0" text="Deposit" toggleGroup="$BankOptions" />
+            <RadioButton fx:id="DepositRB" onAction="#DisableCheckBox" layoutX="10.0" layoutY="132.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="140.0" text="Deposit" toggleGroup="$BankOptions" />
          </children>
       </VBox>
       <VBox layoutX="9.0" layoutY="619.0" prefHeight="253.0" prefWidth="676.0">
@@ -56,8 +56,8 @@
             <Region prefHeight="19.0" prefWidth="282.0" />
             <TextField fx:id="AmountInput" prefHeight="33.0" prefWidth="282.0" text="Enter Amount Here&#10;" />
             <Region prefHeight="19.0" prefWidth="282.0" />
-            <TextField fx:id="DateInput" prefHeight="33.0" prefWidth="282.0" text="Enter Date Here&#10;" />
-            <Button fx:id="SubmitInfo" mnemonicParsing="false" prefHeight="46.0" prefWidth="127.0" text="Submit Info" />
+            <TextField fx:id="DateInput" prefHeight="33.0" prefWidth="282.0" text="Enter Date Here M/D/YYYY&#10;" />
+            <Button fx:id="SubmitInfo" onAction="#getDataFromCommands" mnemonicParsing="false" prefHeight="46.0" prefWidth="127.0" text="Submit Info" />
             <Region prefHeight="19.0" prefWidth="282.0" />
          </children>
       </VBox>
@@ -72,11 +72,11 @@
                   <TextField fx:id="FileImportNameTxtF" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="349.0" />
                </children>
             </HBox>
-            <Button fx:id="SubmitFileButton" mnemonicParsing="false" prefHeight="41.0" prefWidth="138.0" text="Submit File" />
+            <Button fx:id="SubmitFileButton" onAction="#getFileInput" mnemonicParsing="false" prefHeight="41.0" prefWidth="138.0" text="Submit File" />
             <Region prefHeight="40.0" prefWidth="506.0" />
             <HBox prefHeight="76.0" prefWidth="506.0">
                <children>
-                  <Button fx:id="ExportFileButton" mnemonicParsing="false" prefHeight="41.0" prefWidth="138.0" text="Export File" />
+                  <Button fx:id="ExportFileButton" onAction="#exportFile" mnemonicParsing="false" prefHeight="41.0" prefWidth="138.0" text="Export File" />
                   <TextField fx:id="FileNameToExport" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" text="Enter Name Of File to Export" prefHeight="40.0" prefWidth="349.0" />
                </children>
             </HBox>
@@ -89,14 +89,14 @@
       </ScrollPane>
       <HBox layoutX="305.0" layoutY="497.0" prefHeight="76.0" prefWidth="775.0">
          <children>
-            <RadioButton fx:id="DisplayAllAcc" mnemonicParsing="false" prefHeight="56.0" prefWidth="175.0" text="Display All Accounts">
+            <RadioButton fx:id="DisplayAllAcc" onAction="#DisplayAccounts" mnemonicParsing="false" prefHeight="56.0" prefWidth="175.0" text="Display All Accounts">
                <toggleGroup>
                   <ToggleGroup fx:id="PrintType" />
                </toggleGroup></RadioButton>
             <Region prefHeight="76.0" prefWidth="21.0" />
-            <RadioButton fx:id="DisplayByDate" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="56.0" prefWidth="199.0" text="Display Accounts By Date" toggleGroup="$PrintType" />
+            <RadioButton fx:id="DisplayByDate" onAction="#DisplayAccounts" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="56.0" prefWidth="199.0" text="Display Accounts By Date" toggleGroup="$PrintType" />
             <Region layoutX="185.0" layoutY="10.0" prefHeight="76.0" prefWidth="21.0" />
-            <RadioButton fx:id="DisplayByLName" layoutX="206.0" layoutY="10.0" mnemonicParsing="false" prefHeight="56.0" prefWidth="304.0" text="Display Accounts By Last Name" toggleGroup="$PrintType" />
+            <RadioButton fx:id="DisplayByLName" onAction="#DisplayAccounts" layoutX="206.0" layoutY="10.0" mnemonicParsing="false" prefHeight="56.0" prefWidth="304.0" text="Display Accounts By Last Name" toggleGroup="$PrintType" />
          </children>
       </HBox>
    </children>
