--- a/project3/TransactionManager.fxml
+++ b/project3/TransactionManager.fxml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.MenuButton?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextArea?>
@@ -17,19 +20,19 @@
    <children>
       <VBox layoutX="17.0" layoutY="282.0" prefHeight="189.0" prefWidth="161.0">
          <children>
-            <RadioButton fx:id="MoneyMarketRB" onAction="#DisableCheckBox" mnemonicParsing="false" prefHeight="38.0" prefWidth="160.0" text="MoneyMarket">
+            <RadioButton  fx:id="MoneyMarketRB" onAction="#DisableCheckBox" mnemonicParsing="false" prefHeight="38.0" prefWidth="160.0" text="MoneyMarket">
                <toggleGroup>
                   <ToggleGroup fx:id="AccType" />
                </toggleGroup></RadioButton>
             <Region prefHeight="30.0" prefWidth="161.0" />
-            <RadioButton fx:id="SavingRB" onAction="#DisableCheckBox"  layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="160.0" text="Savings" toggleGroup="$AccType" />
+            <RadioButton fx:id="SavingRB" onAction="#DisableCheckBox" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="160.0" text="Savings" toggleGroup="$AccType" />
             <Region layoutX="10.0" layoutY="48.0" prefHeight="30.0" prefWidth="161.0" />
-            <RadioButton fx:id="CheckingRB" onAction="#DisableCheckBox"  layoutX="10.0" layoutY="78.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="160.0" text="Checking" toggleGroup="$AccType" />
+            <RadioButton fx:id="CheckingRB" onAction="#DisableCheckBox" layoutX="10.0" layoutY="78.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="160.0" text="Checking" toggleGroup="$AccType" />
          </children>
       </VBox>
       <VBox layoutX="14.0" layoutY="496.0" prefHeight="101.0" prefWidth="203.0">
          <children>
-            <CheckBox fx:id="SpecialSavingAccCB" onAction="#DisableCheckBox" mnemonicParsing="false" prefHeight="36.0" prefWidth="203.0" text="Special Savings Account" />
+            <CheckBox fx:id="SpecialSavingAccCB" onAction="#DisableCheckBox" mnemonicParsing="false" prefHeight="36.0" prefWidth="203.0" text="Special Savings Acccount" />
             <Region prefHeight="30.0" prefWidth="161.0" />
             <CheckBox fx:id="DirectDepositCheckingsCB" onAction="#DisableCheckBox" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="37.0" prefWidth="203.0" text="Direct Deposit Account" />
          </children>
@@ -56,8 +59,8 @@
             <Region prefHeight="19.0" prefWidth="282.0" />
             <TextField fx:id="AmountInput" prefHeight="33.0" prefWidth="282.0" text="Enter Amount Here&#10;" />
             <Region prefHeight="19.0" prefWidth="282.0" />
-            <TextField fx:id="DateInput" prefHeight="33.0" prefWidth="282.0" text="Enter Date Here M/D/YYYY&#10;" />
-            <Button fx:id="SubmitInfo" onAction="#getDataFromCommands" mnemonicParsing="false" prefHeight="46.0" prefWidth="127.0" text="Submit Info" />
+            <TextField fx:id="DateInput" prefHeight="33.0" prefWidth="282.0" text="Enter Date Here&#10;" />
+            <Button fx:id="SubmitInfo" mnemonicParsing="false" onAction="#getDataFromCommands" prefHeight="46.0" prefWidth="127.0" text="Submit Info" />
             <Region prefHeight="19.0" prefWidth="282.0" />
          </children>
       </VBox>
@@ -72,32 +75,31 @@
                   <TextField fx:id="FileImportNameTxtF" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="349.0" />
                </children>
             </HBox>
-            <Button fx:id="SubmitFileButton" onAction="#getFileInput" mnemonicParsing="false" prefHeight="41.0" prefWidth="138.0" text="Submit File" />
             <Region prefHeight="40.0" prefWidth="506.0" />
             <HBox prefHeight="76.0" prefWidth="506.0">
                <children>
                   <Button fx:id="ExportFileButton" onAction="#exportFile" mnemonicParsing="false" prefHeight="41.0" prefWidth="138.0" text="Export File" />
-                  <TextField fx:id="FileNameToExport" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" text="Enter Name Of File to Export" prefHeight="40.0" prefWidth="349.0" />
+                  <TextField fx:id="FileNameToExport" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="349.0" />
                </children>
             </HBox>
          </children>
       </VBox>
       <ScrollPane layoutX="305.0" layoutY="14.0" prefHeight="476.0" prefWidth="775.0">
          <content>
-            <TextArea fx:id="TextAreaPrint" prefHeight="473.0" prefWidth="775.0" />
+            <TextArea prefHeight="473.0" prefWidth="775.0" />
          </content>
       </ScrollPane>
-      <HBox layoutX="305.0" layoutY="497.0" prefHeight="76.0" prefWidth="775.0">
+      <HBox layoutX="305.0" layoutY="497.0" prefHeight="49.0" prefWidth="140.0">
          <children>
-            <RadioButton fx:id="DisplayAllAcc" onAction="#DisplayAccounts" mnemonicParsing="false" prefHeight="56.0" prefWidth="175.0" text="Display All Accounts">
-               <toggleGroup>
-                  <ToggleGroup fx:id="PrintType" />
-               </toggleGroup></RadioButton>
-            <Region prefHeight="76.0" prefWidth="21.0" />
-            <RadioButton fx:id="DisplayByDate" onAction="#DisplayAccounts" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="56.0" prefWidth="199.0" text="Display Accounts By Date" toggleGroup="$PrintType" />
-            <Region layoutX="185.0" layoutY="10.0" prefHeight="76.0" prefWidth="21.0" />
-            <RadioButton fx:id="DisplayByLName" onAction="#DisplayAccounts" layoutX="206.0" layoutY="10.0" mnemonicParsing="false" prefHeight="56.0" prefWidth="304.0" text="Display Accounts By Last Name" toggleGroup="$PrintType" />
+            <MenuButton fx:id="PrintOptions" onAction="#DisplayAccounts" mnemonicParsing="false" prefHeight="55.0" prefWidth="153.0" text="Print Options">
+              <items>
+                <MenuItem fx:id="PrintAllAccMenuItem" onAction="#DisplayAccounts" mnemonicParsing="false" text="Print All Accounts" />
+                <MenuItem fx:id="PrintByLastNameMenuItem" onAction="#DisplayAccounts" mnemonicParsing="false" text="Print By Last Name" />
+                  <MenuItem fx:id="PrintByDateOpenMenuItem" onAction="#DisplayAccounts" mnemonicParsing="false" text="Print By Date open" />
+              </items>
+            </MenuButton>
          </children>
       </HBox>
+      <ButtonBar layoutX="470.0" layoutY="536.0" prefHeight="40.0" prefWidth="200.0" />
    </children>
 </AnchorPane>
