--- a/project3/TransactionManager.fxml
+++ b/project3/TransactionManager.fxml
@@ -86,7 +86,7 @@
       </VBox>
       <ScrollPane layoutX="305.0" layoutY="14.0" prefHeight="476.0" prefWidth="775.0">
          <content>
-            <TextArea prefHeight="473.0" prefWidth="775.0" />
+            <TextArea fx:id="TextAreaPrint" prefHeight="473.0" prefWidth="775.0" />
          </content>
       </ScrollPane>
       <HBox layoutX="305.0" layoutY="497.0" prefHeight="49.0" prefWidth="140.0">
