--- a/project4/OrderDetails.fxml
+++ b/project4/OrderDetails.fxml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="OrderDetails"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane prefHeight="662.0" prefWidth="995.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="project4.SecondController">
+   <children>
+      <ListView fx:id="DetailsListView" layoutX="44.0" layoutY="42.0" prefHeight="504.0" prefWidth="414.0" />
+      <Button fx:id="AddSelectedSandwichB" layoutX="603.0" layoutY="103.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="267.0" text="ADD SELECTED SANDWICH" />
+      <Button fx:id="RemoveSandwichB" layoutX="603.0" layoutY="184.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="267.0" text="REMOVE" />
+      <Button fx:id="ClearSandwichB" layoutX="603.0" layoutY="269.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="267.0" text="CLEAR" />
+      <Button fx:id="SaveB" layoutX="603.0" layoutY="353.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="267.0" text="SAVE" />
+   </children>
 </AnchorPane>
