--- a/project4/OrderDetails.fxml
+++ b/project4/OrderDetails.fxml
@@ -2,14 +2,16 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
 <AnchorPane prefHeight="662.0" prefWidth="995.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="project4.SecondController">
    <children>
       <ListView fx:id="DetailsListView" layoutX="44.0" layoutY="42.0" prefHeight="504.0" prefWidth="414.0" />
-      <Button fx:id="AddSelectedSandwichB" layoutX="603.0" layoutY="103.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="267.0" text="ADD SELECTED SANDWICH" />
-      <Button fx:id="RemoveSandwichB" layoutX="603.0" layoutY="184.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="267.0" text="REMOVE" />
-      <Button fx:id="ClearSandwichB" layoutX="603.0" layoutY="269.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="267.0" text="CLEAR" />
+      <Button fx:id="AddSelectedSandwichB" onAction="#add"  layoutX="603.0" layoutY="103.0" mnemonicParsing="false"  prefHeight="51.0" prefWidth="267.0" text="ADD SELECTED SANDWICH" />
+      <Button fx:id="RemoveSandwichB" onAction="#remove" layoutX="603.0" layoutY="184.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="267.0" text="REMOVE" />
+      <Button fx:id="ClearSandwichB" onAction="#clear" layoutX="603.0" layoutY="269.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="267.0" text="CLEAR" />
       <Button fx:id="SaveB" layoutX="603.0" layoutY="353.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="267.0" text="SAVE" />
+      <TextField fx:id="SumTotal" layoutX="44.0" layoutY="578.0" prefHeight="51.0" prefWidth="235.0" />
    </children>
 </AnchorPane>
